# self-review-automation

./: .gitignore  .pre-commit-config.yaml  README.md  code_review.py  code_review.sh  main.py  pyproject.toml  run_script.sh  self_review.py  self_review.sh
gradio/: app.py
